# author-style-mcp

./: README.md  pyproject.toml
src/author_style_mcp/: author_style_mcp.py  author_style_operations.py  author_style_taxonomy.py
