[project]
name = "author_style_mcp"
version = "0.1.0"
description = "Curated catalog of 11 author writing styles decomposed into 8 orthogonal dimensions with dual text/image output paths. Each style is an independent stompbox that colors prompts with structural writing patterns."
requires-python = ">=3.10"
dependencies = ["fastmcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
author-style-esque = "author_style_mcp:mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
